--- a/src/main/resources/static/assets/css/loading.css
+++ b/src/main/resources/static/assets/css/loading.css
@@ -885,9 +885,11 @@ code {
       transform
       600ms
       cubic-bezier(.3, .7, .4, 1);
+
   }
   
   .group-edge {
+    
     position: absolute;
     top: 0;
     left: 0;
@@ -960,3 +962,93 @@ code {
   .group-pushable:focus:not(:focus-visible) {
     outline: none;
   }
+
+  .super{
+    display: inline-flex; /* Makes the container fit its content */
+    flex-wrap: wrap; /* Allows wrapping of images to new lines */
+    justify-content: center; /* Centers the images horizontally */
+    align-items: center; /* Centers the images vertically */ 
+    padding: 10px; /* Optional: to add some padding around the images */
+  }
+
+  .super img {
+    max-width: 100%; /* Ensures image can be at most 100% of its container's width */
+    max-height: 100%; /* Ensures image can be at most 100% of its container's height */
+    object-fit: contain; /* Ensures the image scales proportionally */
+    width: auto; /* Keeps the original width */
+    height: auto; /* Keeps the original height */
+    margin: 5px; /* Optional: adds some space between images */
+}
+
+.super video {
+    max-width: 100%; /* Ensures image can be at most 100% of its container's width */
+    max-height: 100%; /* Ensures image can be at most 100% of its container's height */
+    object-fit: contain; /* Ensures the image scales proportionally */
+    width: auto; /* Keeps the original width */
+    height: auto; /* Keeps the original height */
+    margin: 5px; /* Optional: adds some space between images */
+}
+
+.super-dialog {
+    max-width: 90vw; /* Ensure the modal dialog is responsive */
+    max-height: 90vh; /* Ensure the modal dialog is responsive */
+    margin: auto; /* Center the modal dialog */
+}
+
+/* .carousel-item {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: auto; /* Adjust height to fit content */
+    /* max-height: 80vh; Ensure it doesn't exceed viewport height */
+/* }
+
+.carousel-image {
+    max-width: 100%;
+    max-height: 100%;
+    width: auto;
+    height: auto;
+    object-fit: contain;
+} */ */
+
+.superCarousel {
+    display: inline-flex; /* Makes the container fit its content */
+    flex-wrap: wrap; /* Allows wrapping of images to new lines */
+    justify-content: center; /* Centers the images horizontally */
+    align-items: center; /* Centers the images vertically */ 
+    padding: 10px; /* Optional: to add some padding around the images */
+}
+
+.superCarousel img,
+.superCarousel video {
+    max-width: 100%;
+    max-height: 100%;
+    width: auto;
+    height: auto;
+    object-fit: contain;
+    margin: 5px; /* Optional: adds some space between images */
+}
+
+
+.original-size {
+    max-width: 100%;
+    max-height: 100%;
+    width: auto;
+    height: auto;
+}
+
+
+.super-container {
+    width: 200px;
+    height: 200px;
+    overflow: hidden;
+    border-radius: 15px;
+    margin: 3px;
+  }
+  
+  .super-image {
+    width: 100%;
+    height: 100%;
+    object-fit: cover; /* Maintain aspect ratio and fill container */
+  }
+  
