--- a/src/main/resources/templates/layout/searchPage.html
+++ b/src/main/resources/templates/layout/searchPage.html
@@ -225,7 +225,41 @@
     </header><!-- End Header -->
 </div>
 <div th:replace="~{index::navbar}"></div>
-<main id="main" class="main" style="margin-left: 400px;">
+<main id="main" class="main"  >
+    <div class="middle-panel">
+        <ul class="nav nav-pills mb-3" id="pills-tab" role="tablist">
+            <li class="nav-item" role="presentation"> 
+            <button class="nav-link active" onclick="createPostsForSearch()" id="post-search-tab" data-bs-toggle="pill" data-bs-target="#pills-post-search" type="button" role="tab" aria-controls="pills-post-search" aria-selected="true">Post</button>
+            </li>
+            <li class="nav-item" role="presentation">
+              <button class="nav-link" onclick="goToEventTab()" id="event-search-tab" data-bs-toggle="pill" data-bs-target="#pills-event-search" type="button" role="tab" aria-controls="pills-event-search" aria-selected="false">Event</button>
+            </li>
+            <li class="nav-item" role="presentation">
+              <button class="nav-link" onclick="goToPollTab()" id="poll-search-tab" data-bs-toggle="pill" data-bs-target="#pills-poll-search" type="button" role="tab" aria-controls="pills-poll-search" aria-selected="false">Poll</button>
+            </li>
+            <li class="nav-item" role="presentation">
+                <button class="nav-link" onclick="goToUserTab()" id="user-search-tab" data-bs-toggle="pill" data-bs-target="#pills-user-search" type="button" role="tab" aria-controls="pills-user-search" aria-selected="false">User</button>
+              </li>
+              <li class="nav-item" role="presentation">
+                <button class="nav-link" onclick="goToCommunityTab()" id="community-search-tab" data-bs-toggle="pill" data-bs-target="#pills-community-search" type="button" role="tab" aria-controls="pills-community-search" aria-selected="false">Community</button>
+              </li> 
+          </ul>
+          <div class="tab-content" id="pills-tabContent">
+            <div class="tab-pane fade show active" id="pills-post-search" role="tabpanel" aria-labelledby="pills-post-search-tab">...</div>
+            <div class="tab-pane fade" id="pills-event-search" role="tabpanel" aria-labelledby="pills-event-search-tab">...</div>
+            <div class="tab-pane fade" id="pills-poll-search" role="tabpanel" aria-labelledby="pills-poll-search-tab">...</div>
+            <div class="tab-pane fade" id="pills-user-search" role="tabpanel" aria-labelledby="pills-user-search-tab"> 
+            </div>
+            <div class="tab-pane fade" id="pills-community-search" role="tabpanel" aria-labelledby="pills-community-search-tab">
+              <div class="container" style="background-color:transparent">
+                <div id="community-grid" class="row">
+                  
+                </div>
+              </div>
+            </div>
+          </div>
+    
+    </div>
 
 
     <!-- nav bar start  -->
@@ -235,37 +269,6 @@
 
       <!-- result box start  -->
       <script src="/static/assets/js/search.js"></script>
-    <ul class="nav nav-pills mb-3" id="pills-tab" role="tablist">
-        <li class="nav-item" role="presentation"> 
-        <button class="nav-link active" onclick="createPostsForSearch()" id="post-search-tab" data-bs-toggle="pill" data-bs-target="#pills-post-search" type="button" role="tab" aria-controls="pills-post-search" aria-selected="true">Post</button>
-        </li>
-        <li class="nav-item" role="presentation">
-          <button class="nav-link" onclick="goToEventTab()" id="event-search-tab" data-bs-toggle="pill" data-bs-target="#pills-event-search" type="button" role="tab" aria-controls="pills-event-search" aria-selected="false">Event</button>
-        </li>
-        <li class="nav-item" role="presentation">
-          <button class="nav-link" onclick="goToPollTab()" id="poll-search-tab" data-bs-toggle="pill" data-bs-target="#pills-poll-search" type="button" role="tab" aria-controls="pills-poll-search" aria-selected="false">Poll</button>
-        </li>
-        <li class="nav-item" role="presentation">
-            <button class="nav-link" onclick="goToUserTab()" id="user-search-tab" data-bs-toggle="pill" data-bs-target="#pills-user-search" type="button" role="tab" aria-controls="pills-user-search" aria-selected="false">User</button>
-          </li>
-          <li class="nav-item" role="presentation">
-            <button class="nav-link" onclick="goToCommunityTab()" id="community-search-tab" data-bs-toggle="pill" data-bs-target="#pills-community-search" type="button" role="tab" aria-controls="pills-community-search" aria-selected="false">Community</button>
-          </li> 
-      </ul>
-      <div class="tab-content" id="pills-tabContent">
-        <div class="tab-pane fade show active" id="pills-post-search" role="tabpanel" aria-labelledby="pills-post-search-tab">...</div>
-        <div class="tab-pane fade" id="pills-event-search" role="tabpanel" aria-labelledby="pills-event-search-tab">...</div>
-        <div class="tab-pane fade" id="pills-poll-search" role="tabpanel" aria-labelledby="pills-poll-search-tab">...</div>
-        <div class="tab-pane fade" id="pills-user-search" role="tabpanel" aria-labelledby="pills-user-search-tab"> 
-        </div>
-        <div class="tab-pane fade" id="pills-community-search" role="tabpanel" aria-labelledby="pills-community-search-tab">
-          <div class="container" style="background-color:transparent">
-            <div id="community-grid" class="row">
-              
-            </div>
-          </div>
-        </div>
-      </div>
 
 
  
