--- a/src/main/resources/templates/layout/trendingPostDetailPage.html
+++ b/src/main/resources/templates/layout/trendingPostDetailPage.html
@@ -322,6 +322,16 @@
     </div>
 
 
+   
+   
+   
+    
+
+   
+        </div>
+      </div>
+
+
 </main>
 <div th:replace="~{index::footer}"></div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/sockjs-client/1.1.4/sockjs.min.js"></script>
