almost all add2

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -215,6 +215,14 @@
             display: none;
         }
 
+        #memberKickModal #memberListForKick::-webkit-scrollbar {
+            display: none; /* Hide the scrollbar */
+        }
+
+        #memberAddModal #memberList::-webkit-scrollbar {
+            display: none; /* Hide the scrollbar */
+        }
+
     </style>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/intl-tel-input/17.0.8/css/intlTelInput.css" />
 </head>
