--- a/src/main/resources/templates/user/user-chat.html
+++ b/src/main/resources/templates/user/user-chat.html
@@ -94,7 +94,7 @@
                             <input type="text" class="form-control" id="memberSearchForAddChatRoom" placeholder="Search users..">
                         </div>
                     </div>
-                    <div id="memberList">
+                    <div id="memberList"  style="height: 350px; overflow-y: auto;">
 
                     </div>
                 </div>
@@ -124,7 +124,7 @@
                             <input type="text" class="form-control" id="memberSearchForKick" placeholder="Search users..">
                         </div>
                     </div>
-                    <div id="memberListForKick">
+                    <div id="memberListForKick" style="height: 350px; overflow-y: auto;">
 
                     </div>
                 </div>
