--- a/src/main/resources/templates/user/user-profile.html
+++ b/src/main/resources/templates/user/user-profile.html
@@ -572,7 +572,7 @@
                         </div>
                         <div id="newSkillInput" style="display: none;">
                             <input type="text" class="form-control mt-2" placeholder="Enter new skill" id="newSkillNameInput">
-                            <input type="text" class="form-control mt-2" placeholder="Experience" id="newSkillExperienceInput">
+                            <input type="number" class="form-control mt-2" placeholder="Experience" id="newSkillExperienceInput">
                         </div>
                         <button type="button" class="btn btn-primary mt-2" id="addNewSkillBtn">Add New Skill</button>
                         <script src="/static/assets/js/skill.js" defer></script>
