--- a/src/main/resources/templates/layout/user-record.html
+++ b/src/main/resources/templates/layout/user-record.html
@@ -35,7 +35,7 @@
                     </button>
                 </li>
                 <li class="nav-item" role="presentation">
-                    <button class="nav-link" id="total-postPerMonth" data-bs-toggle="tab" data-bs-target="#totalPostPerMonth"
+                    <button class="nav-link" id="total-postPerMonth" data-bs-toggle="tab" data-bs-target="#totalPostPerMonth" onclick="showPostsPerMonth()"
                             type="button" role="tab" aria-controls="totalPostPerMonth" aria-selected="false" sec:authorize="hasAnyAuthority('ADMIN')">User Progress
                     </button>
                 </li>
@@ -161,14 +161,14 @@
                     <div id="trendyPostPerMonth" class="">
                         <div style="display: flex">
                             <div>
-                                <select name="status" id="searchWithYear" class="form-select">
+                                <select name="status" id="searchWithYear" class="form-select" style="width: 100px">
                                     <option value="2024">2024</option>
                                     <option value="2025">2025</option>
                                     <option value="2026">2026</option>
                                 </select>
                             </div>
                             <div style="margin-left: 20px">
-                                <select name="status" id="searchWithMonth" class="form-select">
+                                <select name="status" id="searchWithMonth" class="form-select" style="width: 100px">
                                     <option value="1">January</option>
                                     <option value="2">February</option>
                                     <option value="3">March</option>
@@ -196,7 +196,7 @@
                     <div id="postPerMonth" class="">
                         <div style="display: flex">
                             <div>
-                                <select name="status" id="searchYear" class="form-select">
+                                <select name="status" id="searchYear" class="form-select" style="width: 100px">
                                     <option value="2024">2024</option>
                                     <option value="2025">2025</option>
                                     <option value="2026">2026</option>
