--- a/src/main/resources/templates/layout/forgotPassword.html
+++ b/src/main/resources/templates/layout/forgotPassword.html
@@ -187,7 +187,7 @@
                             </div>
                         </div>
                         <div class="card-footer">
-                            <button class="btn btn-success" type="submit" id="confirmBtn" disabled>Confirm</button>
+                            <button class="btn btn-success" type="submit" id="confirmBtn" onclick="location.href = '/';" disabled>Confirm</button>
                             <button class="btn btn-danger" type="submit" onclick="location.href = '/';">Back to
                                 Login</button>
                         </div>
