--- a/src/main/resources/templates/user/policy.html
+++ b/src/main/resources/templates/user/policy.html
@@ -80,7 +80,7 @@
         <h2>Our Term&Condition</h2>
         <div class="policy-container"></div>
     </div>
-    <div class="custom-modal" id="addPolicyModal" >
+    <div class="custom-modal" id="updatePolicyModal" >
         <link href="/static/assets/css/policy_modal.css" rel="stylesheet">
         <div class="custom-modal-dialog">
             <div class="custom-modal-content">
@@ -98,14 +98,119 @@
 
                 </div>
                 <div class="custom-modal-footer">
-                    <button type="button" id="closePolicyBtn" data-bs-dismiss="modal" class="custom-modal-btn custom-modal-btn-secondary">Close</button>
+                    <button type="button" id="closePolicyBtn" data-dismiss="modal" class="custom-modal-btn custom-modal-btn-secondary">Close</button>
                     <button type="button" id="updatePolicyBtn" data-dismiss="modal" class="custom-modal-btn custom-modal-btn-primary">Update</button>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="modal fade" id="uploadExcelModal" tabindex="-1" aria-labelledby="uploadExcelModalLabel" aria-hidden="true" data-bs-backdrop="static" data-bs-keyboard="false">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header" style="background-color: #007bff; color: white;">
+                    <h5 class="modal-title" id="uploadExcelModalLabel">Upload Excel File</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <form id="uploadForm">
+                        <div class="mb-3">
+                            <label for="fileInput" class="form-label">Select Excel file</label>
+                            <input class="form-control" type="file" id="fileInput" name="file" accept=".xlsx, .xls">
+                        </div>
+                    </form>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+                    <button type="button" class="btn btn-primary" data-bs-dismiss="modal" id="uploadButton">Upload</button>
+                </div>
+            </div>
+            <script src="/static/assets/js/excelUpload.js"></script>
+        </div>
+    </div>
+    <div class="modal fade" id="uploadModal" tabindex="-1" role="dialog" aria-labelledby="uploadModalLabel"
+         aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="uploadModalLabel">Success</h5>
+                </div>
+                <div class="modal-body">
+                    <p>Data upload into the database successfully.</p>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div id="changePasswordModal" class="modal fade" tabindex="-1">
+        <link rel="stylesheet" type="text/css" th:href="@{/static/assets/css/modals.css}">
+        <div class="modal-dialog modal-dialog-centered">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title">Change Password</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <div class="form-group">
+                        <label for="currentPassword">Current Password:</label>
+                        <div class="input-group">
+                            <input type="password" id="currentPassword" name="currentPassword" required class="form-control">
+                            <button id="checkPasswordBtn" class="btn btn-primary">Check</button>
+                        </div>
+                    </div>
+                    <div id="changePasswordFields">
+                        <div class="form-group">
+                            <label for="changePassword">New Password:</label>
+                            <input type="password" id="changePassword" name="changePassword" required class="form-control">
+                            <div id="changePasswordMessage" class="text-danger" style="display: none">Your password is weak.</div>
+                        </div>
+                        <div class="form-group">
+                            <label for="confirmChangePassword">Confirm Password:</label>
+                            <input type="password" id="confirmChangePassword" name="confirmChangePassword" required class="form-control">
+                            <div id="confirmChangePasswordMessage" class="text-danger" style="display: none">Passwords do not match.</div>
+                        </div>
+                        <div class="button-group">
+                            <button id="restartBtn" class="btn btn-secondary">Restart</button>
+                            <button id="saveBtn" class="btn btn-primary">Save</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <script src="/static/assets/js/changePassword.js" defer></script>
+    <div class="modal fade" id="calendarModalBox" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
+         aria-labelledby="staticBackdropLabel" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-scrollable">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="staticBackdropLabel1">Calendar...</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <div id="calendar">
+                    </div>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-outline-secondary" data-bs-dismiss="modal">Close</button>
                 </div>
             </div>
         </div>
     </div>
 </main>
 <div th:replace="~{index::footer}"></div>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/sockjs-client/1.1.4/sockjs.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/stomp.js/2.3.3/stomp.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/emojionearea/3.4.2/emojionearea.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/sockjs-client/1.1.4/sockjs.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/stomp.js/2.3.3/stomp.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
 <script th:inline="javascript">
     const authenticationName = /*[[${#authentication.name}]]*/ '';
 </script>
@@ -228,7 +333,10 @@
                                         });
                                     }
                                     quill.root.innerHTML = data.rule;
-                                    document.getElementById('addPolicyModal').style.display = 'block';
+                                    document.getElementById('updatePolicyModal').style.display = 'block';
+                                    document.getElementById('closePolicyBtn').addEventListener('click', function() {
+                                        document.getElementById('updatePolicyModal').style.display = 'none';
+                                    })
                                     // Update Policy
                                     document.getElementById('updatePolicyBtn').addEventListener('click', function() {
                                         data.rule = quill.root.innerHTML;
@@ -243,7 +351,7 @@
                                                 if (!response.ok) {
                                                     throw new Error('Network response was not ok');
                                                 }
-                                                document.getElementById('addPolicyModal').style.display = 'none';
+                                                document.getElementById('updatePolicyModal').style.display = 'none';
                                                 location.reload();
                                             })
                                             .catch(error => {
@@ -283,13 +391,13 @@
 
                 // Close modal function
                 document.querySelector('.custom-modal-close').addEventListener('click', function() {
-                    document.getElementById('addPolicyModal').style.display = 'none';
+                    document.getElementById('updatePolicyModal').style.display = 'none';
                 });
 
                 // Close modal on outside click
                 window.addEventListener('click', function(event) {
-                    if (event.target === document.getElementById('addPolicyModal')) {
-                        document.getElementById('addPolicyModal').style.display = 'none';
+                    if (event.target === document.getElementById('updatePolicyModal')) {
+                        document.getElementById('updatePolicyModal').style.display = 'none';
                     }
                 });
 
