--- a/src/main/resources/templates/user/user-chat.html
+++ b/src/main/resources/templates/user/user-chat.html
@@ -29,7 +29,7 @@
     <div class="chat-container " id="chat-page">
         <div class="users-list">
             <div class="users-list-container">
-                <img src="/static/assets/img/DAT-logo.png" alt="" style="padding: 10px">
+                <img src="/static/assets/img/DAT-logo.png" alt="" style="padding: 10px; width: 100px">
                 <ul id="connectedUsers">
                 </ul>
             </div>
@@ -39,13 +39,13 @@
         </div>
 
         <div class="chat-area">
-            <div class="bar-above-messages">
+            <div id="bar-above-messages" style="margin-top: -25px;">
                 <div class="room-info-container">
                     <span id="group-photo-id"></span>
                     <span class="room-name" id="room-name"></span>
                 </div>
                 <i class="fa-solid fa-video" id="vd-icon" style="margin-right: 15px; display: none" ></i>
-                <div class="dropdown" id="IsSelected" style="display: none">
+                <div class="dropdown" id="IsSelected" style="display: block">
                     <i class="fa-solid fa-circle-info custom-dropdown-toggle" id="dropdownMenuButton" data-bs-toggle="dropdown"
                        aria-expanded="false"></i>
                     <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
@@ -103,7 +103,100 @@
     </div>
 </div>
 
-
+<div class="modal fade" id="uploadExcelModal" tabindex="-1" aria-labelledby="uploadExcelModalLabel" aria-hidden="true" data-bs-backdrop="static" data-bs-keyboard="false">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header" style="background-color: #007bff; color: white;">
+                <h5 class="modal-title" id="uploadExcelModalLabel">Upload Excel File</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                <form id="uploadForm">
+                    <div class="mb-3">
+                        <label for="fileInput" class="form-label">Select Excel file</label>
+                        <input class="form-control" type="file" id="fileInput" name="file" accept=".xlsx, .xls">
+                    </div>
+                </form>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+                <button type="button" class="btn btn-primary" data-bs-dismiss="modal" id="uploadButton">Upload</button>
+            </div>
+        </div>
+        <script src="/static/assets/js/excelUpload.js"></script>
+    </div>
+</div>
+<div class="modal fade" id="uploadModal" tabindex="-1" role="dialog" aria-labelledby="uploadModalLabel"
+     aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="uploadModalLabel">Success</h5>
+            </div>
+            <div class="modal-body">
+                <p>Data upload into the database successfully.</p>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+            </div>
+        </div>
+    </div>
+</div>
+<div id="changePasswordModal" class="modal fade" tabindex="-1">
+    <link rel="stylesheet" type="text/css" th:href="@{/static/assets/css/modals.css}">
+    <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title">Change Password</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                <div class="form-group">
+                    <label for="currentPassword">Current Password:</label>
+                    <div class="input-group">
+                        <input type="password" id="currentPassword" name="currentPassword" required class="form-control">
+                        <button id="checkPasswordBtn" class="btn btn-primary">Check</button>
+                    </div>
+                </div>
+                <div id="changePasswordFields">
+                    <div class="form-group">
+                        <label for="changePassword">New Password:</label>
+                        <input type="password" id="changePassword" name="changePassword" required class="form-control">
+                        <div id="changePasswordMessage" class="text-danger" style="display: none">Your password is weak.</div>
+                    </div>
+                    <div class="form-group">
+                        <label for="confirmChangePassword">Confirm Password:</label>
+                        <input type="password" id="confirmChangePassword" name="confirmChangePassword" required class="form-control">
+                        <div id="confirmChangePasswordMessage" class="text-danger" style="display: none">Passwords do not match.</div>
+                    </div>
+                    <div class="button-group">
+                        <button id="restartBtn" class="btn btn-secondary">Restart</button>
+                        <button id="saveBtn" class="btn btn-primary">Save</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<script src="/static/assets/js/changePassword.js" defer></script>
+<div class="modal fade" id="calendarModalBox" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
+     aria-labelledby="staticBackdropLabel" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-scrollable">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="staticBackdropLabel1">Calendar...</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                <div id="calendar">
+                </div>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-outline-secondary" data-bs-dismiss="modal">Close</button>
+            </div>
+        </div>
+    </div>
+</div>
 <div class="modal fade" id="memberKickModal" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
      aria-labelledby="staticBackdropLabel" aria-hidden="true">
     <div class="modal-dialog">
@@ -132,6 +225,9 @@
         </form>
     </div>
 </div>
+<div th:replace="~{index::footer}"></div>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/sockjs-client/1.1.4/sockjs.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/stomp.js/2.3.3/stomp.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
@@ -141,6 +237,7 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
+
 <script>
     var $j = jQuery.noConflict();
     $j(document).ready(function () {
