--- a/src/main/resources/templates/user/view-all-user.html
+++ b/src/main/resources/templates/user/view-all-user.html
@@ -16,6 +16,101 @@
     <button sec:authorize="hasAnyAuthority('ADMIN')" id="modeToggleBtn" class="btn btn-primary mode-toggle-btn"
             onclick="toggleView()">User Mode
     </button>
+    <br>
+    <div class="modal fade" id="uploadExcelModal" tabindex="-1" aria-labelledby="uploadExcelModalLabel" aria-hidden="true" data-bs-backdrop="static" data-bs-keyboard="false">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header" style="background-color: #007bff; color: white;">
+                    <h5 class="modal-title" id="uploadExcelModalLabel">Upload Excel File</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <form id="uploadForm">
+                        <div class="mb-3">
+                            <label for="fileInput" class="form-label">Select Excel file</label>
+                            <input class="form-control" type="file" id="fileInput" name="file" accept=".xlsx, .xls">
+                        </div>
+                    </form>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+                    <button type="button" class="btn btn-primary" data-bs-dismiss="modal" id="uploadButton">Upload</button>
+                </div>
+            </div>
+            <script src="/static/assets/js/excelUpload.js"></script>
+        </div>
+    </div>
+    <div class="modal fade" id="uploadModal" tabindex="-1" role="dialog" aria-labelledby="uploadModalLabel"
+         aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="uploadModalLabel">Success</h5>
+                </div>
+                <div class="modal-body">
+                    <p>Data upload into the database successfully.</p>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div id="changePasswordModal" class="modal fade" tabindex="-1">
+        <link rel="stylesheet" type="text/css" th:href="@{/static/assets/css/modals.css}">
+        <div class="modal-dialog modal-dialog-centered">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title">Change Password</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <div class="form-group">
+                        <label for="currentPassword">Current Password:</label>
+                        <div class="input-group">
+                            <input type="password" id="currentPassword" name="currentPassword" required class="form-control">
+                            <button id="checkPasswordBtn" class="btn btn-primary">Check</button>
+                        </div>
+                    </div>
+                    <div id="changePasswordFields">
+                        <div class="form-group">
+                            <label for="changePassword">New Password:</label>
+                            <input type="password" id="changePassword" name="changePassword" required class="form-control">
+                            <div id="changePasswordMessage" class="text-danger" style="display: none">Your password is weak.</div>
+                        </div>
+                        <div class="form-group">
+                            <label for="confirmChangePassword">Confirm Password:</label>
+                            <input type="password" id="confirmChangePassword" name="confirmChangePassword" required class="form-control">
+                            <div id="confirmChangePasswordMessage" class="text-danger" style="display: none">Passwords do not match.</div>
+                        </div>
+                        <div class="button-group">
+                            <button id="restartBtn" class="btn btn-secondary">Restart</button>
+                            <button id="saveBtn" class="btn btn-primary">Save</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <script src="/static/assets/js/changePassword.js" defer></script>
+    <div class="modal fade" id="calendarModalBox" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
+         aria-labelledby="staticBackdropLabel" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-scrollable">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="staticBackdropLabel1">Calendar...</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <div id="calendar">
+                    </div>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-outline-secondary" data-bs-dismiss="modal">Close</button>
+                </div>
+            </div>
+        </div>
+    </div>
     <div id="tableView" class="table-responsive" style="width:100%" sec:authorize="hasAnyAuthority('ADMIN')">
         <table id="usersTable" class="table table-striped table-bordered" style="width:100%">
             <thead>
@@ -263,6 +358,7 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.53/vfs_fonts.js"></script>
 <script src="https://cdn.datatables.net/buttons/2.3.6/js/buttons.html5.min.js"></script>
 <script src="https://cdn.datatables.net/buttons/2.3.6/js/buttons.print.min.js"></script>
+
 <script th:inline="javascript">
     /*<![CDATA[*/
     const userRole = /*[[${#authentication.principal.authorities}]]*/ '';
@@ -570,7 +666,6 @@
             return 'UNKNOWN';
         }
     }
-
 
 </script>
 
