almost all add2

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -629,7 +629,7 @@
            
            </div>
 
-            <label id="labelForRawFile" onclick="clickRawFileIcon()" for="rawFile" class="font-monospace m-2">File <i class="fa-solid fa-file-import"></i></label>
+            <label id="labelForRawFile" onclick="clockRawFileIcon()" for="rawFile" class="font-monospace m-2">File <i class="fa-solid fa-file-import"></i></label>
             <input style="display: none; border: none; border-radius: 20px; box-shadow: 0 0 4px 0px rgba(0, 0, 0, 0.5); "  type="file" name="raw" id="raw" multiple>
 
 
